--- a/src/landing.css
+++ b/src/landing.css
@@ -3,6 +3,9 @@
     border: none;
     display: flex;
     justify-content: flex-end;
+    font-family: 'Inter', Arial, sans-serif;
+    color: #00573F;
+    font-weight: bold
 }
 
 .button-container {
@@ -24,6 +27,16 @@
     height: auto;
     max-width: 100%;
     max-height: 100%;
+}
+
+.kaha{
+    width: 25%;
+    height: 25%;
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .img-container{
