--- a/src/landing.css
+++ b/src/landing.css
@@ -3,7 +3,7 @@
     border: none;
     display: flex;
     justify-content: flex-end;
-    font-family: 'Inter', Arial, sans-serif;
+    font-family: 'Inter';
     color: #00573F;
     font-weight: bold
 }
