--- a/src/landing.css
+++ b/src/landing.css
@@ -63,6 +63,29 @@ body{
     height: max-content;
     padding: 1%;
 }
+
+.footer {
+    box-sizing: content-box;
+    display: inline-block;
+    width: 100%;
+}  
   
+.footer-logo{
+    width: 5%;
+    height: 2.5%;
+}
   
-  
+.powered{
+    font-family: 'Inter';
+    font-size: 10px;
+    padding-bottom: 10px;
+}
+
+.deep{
+    font-family: 'Inter';
+    font-size: 10px;
+    font-weight: bold;
+    font-style: italic;
+    padding-bottom: 10px;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
