--- a/src/landing.css
+++ b/src/landing.css
@@ -66,8 +66,10 @@ body{
 
 .footer {
     box-sizing: content-box;
-    display: inline-block;
+    display: relative;
     width: 100%;
+    padding-top: 20px;
+    margin-top: 20px;
 }  
   
 .footer-logo{
@@ -78,7 +80,10 @@ body{
 .powered{
     font-family: 'Inter';
     font-size: 10px;
-    padding-bottom: 10px;
+    position: absolute;
+    padding-bottom: 12px;
+    bottom: 1%;
+    left: 5%;
 }
 
 .deep{
@@ -86,6 +91,9 @@ body{
     font-size: 10px;
     font-weight: bold;
     font-style: italic;
-    padding-bottom: 10px;
+    position: absolute;
+    padding-bottom: 12px;
+    bottom: 1%;
+    left: 9.5%;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
