added sign up modal

--- a/src/Pages/Customer/Landing/SignupForm.css
+++ b/src/Pages/Customer/Landing/SignupForm.css
@@ -4,8 +4,10 @@
     align-items: center;
   }
   
+.name, 
 .email,
-.password {
+.password,
+.contact {
     ::placeholder {
         font: 'Inter';
     }
