--- a/src/Pages/Customer/Landing/Landing.css
+++ b/src/Pages/Customer/Landing/Landing.css
@@ -82,7 +82,7 @@ body{
 
 .buttons {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     margin-top: 2 rem;
 }  
