--- a/src/Pages/Customer/Landing/Landing.css
+++ b/src/Pages/Customer/Landing/Landing.css
@@ -47,6 +47,8 @@
 
 body{
     overflow: hidden;
+    margin: 0;
+    padding: 0;
 }
 
 .login {
@@ -88,25 +90,29 @@ body{
 }  
 
 .footer {
-    box-sizing: content-box;
-    display: relative;
+    text-align: left;
+    position: fixed;
+    left: 10px;
     width: 100%;
-    padding-top: 20px;
-    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin: 0 !important;
+    bottom: 0 !important;
+    
 }  
   
 .footer-logo{
     width: 5%;
-    height: 2.5%;
+    align-items: baseline;
+    margin: 0 !important;
+    bottom: 0 !important;
+    padding: 0 !important;
 }
   
 .powered{
     font-family: 'Inter';
     font-size: 10px;
-    position: absolute;
-    padding-bottom: 12px;
-    bottom: 1%;
-    left: 5%;
 }
 
 .deep{
@@ -114,9 +120,5 @@ body{
     font-size: 10px;
     font-weight: bold;
     font-style: italic;
-    position: absolute;
-    padding-bottom: 12px;
-    bottom: 1%;
-    left: 9.5%;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
