--- a/src/Pages/Admin/Landing/Landing.css
+++ b/src/Pages/Admin/Landing/Landing.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: flex-end;
     font-family: 'Inter';
-    color: #00573F;
+    color: #481E1E;
     font-weight: bold
 }
 
