--- a/src/Pages/Admin/Landing/LoginModal.css
+++ b/src/Pages/Admin/Landing/LoginModal.css
@@ -16,7 +16,7 @@
   background-color: #fff;
   padding: 2rem;
   border-radius: 20px;
-  background-color: #520000;
+  background-color: #481E1E;
   backdrop-filter: blur(5px);
   box-shadow: 1px 4px 4px 2px rgba(0, 0, 0, 0.5);
 }
@@ -39,7 +39,7 @@
 
 .loginmodal {
   background-color: #FFFFFF;
-  color: #520000;
+  color: #481E1E;
   font: 'Inter';
   border:none;
   width: 150px;
@@ -47,7 +47,7 @@
 }
 
 .loginmodal:hover {
-  background-color: #520000;
+  background-color: #481E1E;
   color: #FFFFFF;
   border-color: #FFFFFF;
   border-width: 1px;
