--- a/src/Pages/Customer/Landing/LoginForm.css
+++ b/src/Pages/Customer/Landing/LoginForm.css
@@ -6,13 +6,11 @@
   
 .email,
 .password {
-    ::placeholder {
-        font: 'Inter';
-    }
-        width: 75%;
-        height: 40px;
-        border-radius: 10px;
-        border: none;
-        margin-bottom: 20px; 
-    }
+    font-family: 'Inter';
+    width: 75%;
+    height: 40px;
+    border-radius: 10px;
+    border: none;
+    margin-bottom: 20px; 
+}
   
