--- a/src/Pages/Customer/Landing/LoginModal.css
+++ b/src/Pages/Customer/Landing/LoginModal.css
@@ -10,7 +10,7 @@
   align-items: center;
 }
 
-.modal {
+.customer-modal {
   width: 30vw;
   height: auto;
   background-color: #fff;
@@ -21,7 +21,12 @@
   box-shadow: 1px 4px 4px 2px rgba(0, 0, 0, 0.5);
 }
 
-.modal_header-title {
+.customer-modal_header-title {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 30px;
+  line-height: 48px;
   text-align: center;
   color: #520000;
 }
@@ -57,8 +62,8 @@
 }
 
 
-.login {
-  background-color: #520000;
+.customer-login {
+  background-color: #481E1E;
   color: #FFFFFF;
   font: 'Inter';
   border:none;
@@ -68,7 +73,7 @@
 
 .signup {
   background-color: #FFFFFF;
-  color: #520000;
+  color: #481E1E;
   font: 'Inter';
   border:none;
   width: 150px;
