--- a/src/Pages/Customer/Landing/Landing.css
+++ b/src/Pages/Customer/Landing/Landing.css
@@ -5,7 +5,8 @@
     justify-content: flex-end;
     font-family: 'Inter';
     color: #00573F;
-    font-weight: bold
+    font-weight: bold;
+    font-family: 'Inter';
 }
 
 .button-container {
@@ -13,6 +14,7 @@
     justify-content: flex-end;
     margin-right: 5%;
     padding-top: 2%;
+    font-family: 'Inter';
 }
 
 .landing {
@@ -22,14 +24,14 @@
     height: 100vh;
 }
 
-.logo{
-    width: 8%;
+.logo-landing {
+    width: 10%;
     height: auto;
     max-width: 100%;
     max-height: 100%;
 }
 
-.kaha{
+.kaha {
     width: 25%;
     height: 25%;
     max-width: 100%;
@@ -39,55 +41,55 @@
     margin-right: auto;
 }
 
-.img-container{
+.img-container {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-body{
+body {
     overflow: hidden;
-    margin: 0;
-    padding: 0;
+    font-family: 'Inter';
 }
 
-.login {
+.login-btn {
     background: #481E1E;
     border: none;
     border-radius: 25px;
-    display: block;
-    margin: 0 auto;
-    font-family: 'Inter', Arial, sans-serif;
+    font-family: 'Inter';
     color: #FFFFFF;
     font-weight: bold;
-    width: 15%;
+    font-size: medium;
+    width: 10%;
     height: max-content;
     padding: 1%;
-    cursor: pointer; 
-}  
+    cursor: pointer;
+}
 
-.signup {
+.signup-btn {
     background: #FFFFFF;
     border: none;
     border-radius: 25px;
-    display: block;
-    margin: 0 auto;
-    font-family: 'Inter', Arial, sans-serif;
+    font-family: 'Inter';
     color: #481E1E;
     font-weight: bold;
-    width: 15%;
+    font-size: medium;
+    width: 10%;
     height: max-content;
     padding: 1%;
-    cursor: pointer; 
-    margin-right: 1rem;
-} 
+    cursor: pointer;
+
+}
 
 .buttons {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
-    margin-top: 2 rem;
-}  
+}
+
+.space {
+    margin: 3% !important;
+}
 
 .footer {
     text-align: left;
@@ -99,26 +101,27 @@ body{
     justify-content: flex-start;
     margin: 0 !important;
     bottom: 0 !important;
-    
-}  
-  
-.footer-logo{
+
+}
+
+.footer-logo {
     width: 5%;
     align-items: baseline;
     margin: 0 !important;
     bottom: 0 !important;
     padding: 0 !important;
 }
-  
-.powered{
+
+.powered {
     font-family: 'Inter';
-    font-size: 10px;
+    font-size: x-small;
 }
 
-.deep{
+.deep {
     font-family: 'Inter';
-    font-size: 10px;
-    font-weight: bold;
+    font-size: x-small;
+    font-weight: bolder !important;
     font-style: italic;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin-left: 1ex;
 }
