--- a/src/Pages/Customer/Landing/LoginForm.css
+++ b/src/Pages/Customer/Landing/LoginForm.css
@@ -2,8 +2,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
-  
+    font-family: 'Inter';
+}
+
 .email,
 .password {
     font-family: 'Inter';
@@ -11,6 +12,8 @@
     height: 40px;
     border-radius: 10px;
     border: none;
-    margin-bottom: 20px; 
+    margin-bottom: 20px;
+    font-family: 'Inter';
+    padding-inline-start: 5%;
+    padding-inline-end: 5%;
 }
-  
