--- a/src/Pages/Admin/Landing/LoginModal.css
+++ b/src/Pages/Admin/Landing/LoginModal.css
@@ -38,12 +38,18 @@
 }
 
 .loginmodal {
-  background-color: #FFFFFF;
+
+  background: #FFFFFF;
+  border: none;
+  border-radius: 10px;
+  font-family: 'Inter';
   color: #481E1E;
-  font: 'Inter';
-  border:none;
-  width: 150px;
-  font-weight: bold;
+  /* font-weight: bold; */
+  font-size: medium;
+  width: 10vw;
+  height: 5vh;
+  padding: 1%;
+  cursor: pointer;
 }
 
 .loginmodal:hover {
