--- a/src/Pages/Admin/Landing/LoginForm.css
+++ b/src/Pages/Admin/Landing/LoginForm.css
@@ -6,13 +6,12 @@
   
 .email,
 .password {
-    ::placeholder {
-        font: 'Inter';
-    }
-        width: 75%;
-        height: 40px;
-        border-radius: 10px;
-        border: none;
-        margin-bottom: 20px; 
-    }
+    font-family: 'Inter';
+    font-weight: 400;
+    width: 150%;
+    height: 40px;
+    border-radius: 10px;
+    border: none;
+    margin-bottom: 20px; 
+}
   
