--- a/src/Pages/Admin/Landing/LoginModal.css
+++ b/src/Pages/Admin/Landing/LoginModal.css
@@ -1,9 +1,6 @@
 .modalContainer {
   position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  top: 0; right: 0; bottom: 0; left: 0;
   background-color: rgba(0, 0, 0, 0.35);
   display: flex;
   justify-content: center;
@@ -19,11 +16,16 @@
   background-color: #481E1E;
   backdrop-filter: blur(5px);
   box-shadow: 1px 4px 4px 2px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .modal_header-title {
   text-align: center;
   color: #fff;
+  margin-top: 10px;
 }
 
 .close {
@@ -35,21 +37,20 @@
 
 .close:hover img {
   transform: scale(1.1);
-}
+} 
 
 .loginmodal {
-
   background: #FFFFFF;
   border: none;
   border-radius: 10px;
   font-family: 'Inter';
+  font-family: 600;
   color: #481E1E;
-  /* font-weight: bold; */
   font-size: medium;
   width: 10vw;
   height: 5vh;
-  padding: 1%;
   cursor: pointer;
+  margin: auto;
 }
 
 .loginmodal:hover {
@@ -58,4 +59,9 @@
   border-color: #FFFFFF;
   border-width: 1px;
   border-style: solid;
+}
+
+footer.modal_footer {
+  margin: 0;
+  padding: 0;
 }
