--- a/src/Pages/Customer/Landing/LoginModal.css
+++ b/src/Pages/Customer/Landing/LoginModal.css
@@ -1,9 +1,6 @@
 .modalContainer {
   position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  top: 0; right: 0; bottom: 0; left: 0;
   background-color: rgba(0, 0, 0, 0.35);
   display: flex;
   justify-content: center;
@@ -19,6 +16,10 @@
   background-color: #B88D5D;
   backdrop-filter: blur(5px);
   box-shadow: 1px 4px 4px 2px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .customer-modal_header-title {
@@ -29,6 +30,7 @@
   line-height: 48px;
   text-align: center;
   color: #520000;
+  margin-top: 10px;
 }
 
 .close {
@@ -42,17 +44,12 @@
   transform: scale(1.1);
 }
 
-/* .modalContainer .modal_content {
-  border-bottom: 1px solid #dddddd;
-  padding: 2rem 0;
-} */
-
 .modal_footer {
   font-family: "Inter";
   float: right;
   margin-top: 3%;
   margin-right: 7%;
-  padding-bottom: 0;
+  padding-bottom: 5%;
 }
 
 
@@ -60,18 +57,22 @@
   background: #481E1E;
   border: none;
   border-radius: 10px;
-
   font-family: 'Inter';
   color: #FFFFFF;
-  /* font-weight: bold; */
   font-size: medium;
   width: 10vw;
   height: 5vh;
-  padding: 1%;
   cursor: pointer;
+  padding: 0;
+  margin: 0;
 }
 
 .login:hover,
 .signup:hover {
   background-color: rgba(54, 67, 72, 0.8);
+}
+
+footer.modal_footer {
+  margin: 0;
+  padding: 0;
 }
