--- a/src/Pages/Customer/Landing/SignupForm.css
+++ b/src/Pages/Customer/Landing/SignupForm.css
@@ -9,12 +9,12 @@
 .password,
 .contact {
     font-family: 'Inter';
-    width: 75%;
+    font-weight: 400;
+    width: 150%;
     height: 40px;
     border-radius: 10px;
     border: none;
     margin-bottom: 20px;
-    font-family: 'Inter';
     padding-inline-start: 5%;
     padding-inline-end: 5%;
 }
