--- a/src/Pages/Admin/Landing/Landing.css
+++ b/src/Pages/Admin/Landing/Landing.css
@@ -22,14 +22,14 @@
     height: 100vh;
 }
 
-.logo{
+.logo {
     width: 8%;
     height: auto;
     max-width: 100%;
     max-height: 100%;
 }
 
-.kaha{
+.kaha {
     width: 25%;
     height: 25%;
     max-width: 100%;
@@ -39,13 +39,13 @@
     margin-right: auto;
 }
 
-.img-container{
+.img-container {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-body{
+body {
     overflow: hidden;
     margin: 0;
     padding: 0;
@@ -63,15 +63,16 @@ body{
     width: 15%;
     height: max-content;
     padding: 1%;
-    cursor: pointer; 
-}  
+    cursor: pointer;
+    font-size: medium;
+}
 
 .button {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     margin-top: 2 rem;
-}  
+}
 
 .footer {
     text-align: left;
@@ -83,23 +84,23 @@ body{
     justify-content: flex-start;
     margin: 0 !important;
     bottom: 0 !important;
-    
-}  
-  
-.footer-logo{
+
+}
+
+.footer-logo {
     width: 5%;
     align-items: baseline;
     margin: 0 !important;
     bottom: 0 !important;
     padding: 0 !important;
 }
-  
-.powered{
+
+.powered {
     font-family: 'Inter';
     font-size: 10px;
 }
 
-.deep{
+.deep {
     font-family: 'Inter';
     font-size: 10px;
     font-weight: bold;
