--- a/src/Pages/Admin/Employee/Employee.css
+++ b/src/Pages/Admin/Employee/Employee.css
@@ -23,18 +23,148 @@
 .add-employee {
     font-family: 'Inter';
     font-style: normal;
+    font-size: 15px;
     background-color: #520000;
     color: #FFFFFF;
-    width: 9%;
-    height: 30px; 
+    width: 11%;
+    height:35px; 
     border-radius: 5px;
     border: none;
     margin: 20px 20px 20px 100px;
-    padding: 5px 20px 0px 5px;
+    padding: 5px 20px 5px 5px;
     float: right;
     background-image: url(../../../Assets/addemployee.svg);
     background-size: 16px 16px;
     background-position: 95% center; 
     background-repeat: no-repeat;
     text-align: center;
+    cursor: pointer;
+}
+
+/* ADD EMPLOYEE MODAL css */
+
+.add-employee-container {
+    position: fixed;
+    top: 0; right: 0; bottom: 0; left: 0;
+    background-color: rgba(0, 0, 0, 0.35);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+  
+.add-employee-modal {
+    width: 30vw;
+    height: auto;
+    background-color: #fff;
+    padding: 2rem;
+    border-radius: 20px;
+    background-color: #B88D5D;
+    backdrop-filter: blur(5px);
+    box-shadow: 1px 4px 4px 2px rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.exit {
+    background-color: transparent;
+    border: none;
+    position: absolute;
+    top: 8%;
+    right: 8%;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+}
+  
+.exit img {
+    height: 20px;
+}
+  
+.add-employee-modal_header-title {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 30px;
+    line-height: 48px;
+    text-align: center;
+    color: #520000;
+    margin-top: 10px;
+}
+  
+.close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: transparent;
+}
+  
+.close:hover img {
+    transform: scale(1.1);
+}
+  
+.button-row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.okay {
+    background: #481E1E;
+    border: none;
+    border-radius: 10px;
+    font-family: 'Inter';
+    color: #FFFFFF;
+    font-size: medium;
+    width: 6vw;
+    height: 5vh;
+    cursor: pointer;
+    padding: 0;
+    margin-right: 10px;
+}
+
+.cancel {
+    background: #FFFFFF;
+    border: none;
+    border-radius: 10px;
+    font-family: 'Inter';
+    font-weight: 600;
+    color: #481E1E;
+    font-size: medium;
+    width: 6vw;
+    height: 5vh;
+    cursor: pointer;
+    padding: 0;
+    margin-right: 10px;
+}
+  
+.okay:hover,
+.cancel:hover {
+    background-color: rgba(54, 67, 72, 0.8);
+}
+  
+
+/* ADD EMPLOYEE FORM CSS */
+
+.input {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.name,
+.email,
+.password,
+.contact {
+    font-family: 'Inter';
+    font-weight: 400;
+    width: 150%;
+    height: 40px;
+    border-radius: 10px;
+    border: none;
+    margin-bottom: 20px;
+    padding-inline-start: 5%;
+    padding-inline-end: 5%;
 }
