--- a/src/Pages/Admin/Employee/EmployeeList.css
+++ b/src/Pages/Admin/Employee/EmployeeList.css
@@ -57,6 +57,7 @@
     font-family: 'Inter';
     font-style: normal;
     background-color: #520000;
+    font-size: 100%;
     color: #FFFFFF;
     width: 100%;
     height: 30px; 
