--- a/src/Pages/Admin/Employee/Employee.css
+++ b/src/Pages/Admin/Employee/Employee.css
@@ -81,6 +81,7 @@
 .edit {
     font-family: 'Inter';
     font-style: normal;
+    font-size: 100%;
     background-color: #520000;
     color: #FFFFFF;
     width: 100%;
@@ -96,6 +97,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 
 .delete {
@@ -117,6 +119,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 
 /* ADD EMPLOYEE MODAL css */
@@ -334,4 +337,41 @@
 .no:hover,
 .yes:hover {
     background-color: rgba(54, 67, 72, 0.8);
+}
+
+/* EDIT EMPLOYEE CSS */
+
+.edit-employee-container {
+    position: fixed;
+    top: 0; right: 0; bottom: 0; left: 0;
+    background-color: rgba(0, 0, 0, 0.35);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+  
+.edit-employee-modal {
+    width: 30vw;
+    height: auto;
+    background-color: #fff;
+    padding: 2rem;
+    border-radius: 20px;
+    background-color: #B88D5D;
+    backdrop-filter: blur(5px);
+    box-shadow: 1px 4px 4px 2px rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+  
+.edit-employee-modal_header-title {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 30px;
+    line-height: 48px;
+    text-align: center;
+    color: #520000;
+    margin-top: 10px;
 }
