--- a/src/Pages/Admin/Employee/Employee.css
+++ b/src/Pages/Admin/Employee/Employee.css
@@ -237,8 +237,6 @@
 .name,
 .email,
 .password {
-  /* Add your styles here */
-  /* Example styles */
   font-family: 'Inter';
   font-weight: 400;
   width: 150%;
@@ -395,4 +393,114 @@
     text-align: center;
     color: #520000;
     margin-top: 10px;
+}
+
+/* VIEW EMPLOYEE CSS */
+
+.view-employee-container {
+    position: fixed;
+    top: 0; right: 0; bottom: 0; left: 0;
+    background-color: rgba(0, 0, 0, 0.35);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+  
+.view-employee-modal {
+    width: 30vw;
+    height: auto;
+    background-color: #fff;
+    padding: 2rem;
+    border-radius: 20px;
+    background-color: #B88D5D;
+    backdrop-filter: blur(5px);
+    box-shadow: 1px 4px 4px 2px rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+  
+.view-employee-modal_header-title {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 30px;
+    line-height: 48px;
+    text-align: center;
+    color: #520000;
+    margin-top: 10px;
+}
+
+.view-edit {
+    background: #481E1E;
+    border: none;
+    border-radius: 10px;
+    font-family: 'Inter';
+    color: #FFFFFF;
+    font-size: medium;
+    width: 6vw;
+    height: 5vh;
+    cursor: pointer;
+    padding: 0;
+    margin-right: 10px;
+}
+
+.view-delete {
+    background: #FFFFFF;
+    border: none;
+    border-radius: 10px;
+    font-family: 'Inter';
+    font-weight: 600;
+    color: #481E1E;
+    font-size: medium;
+    width: 6vw;
+    height: 5vh;
+    cursor: pointer;
+    padding: 0;
+    margin-right: 10px;
+}
+
+.employee-data {
+    cursor: pointer;
+}
+
+/* VIEW EMPLOYEE FORM CSS */
+
+.vname,
+.vemail,
+.vpassword {
+  font-family: 'Inter';
+  font-weight: 400;
+  width: 150%;
+  height: 40px;
+  border-radius: 10px;
+  border: none;
+  margin-bottom: 20px;
+  padding-inline-start: 5%;
+  padding-inline-end: 5%;
+  cursor: default;
+  outline: none;
+}
+
+.vcontact {
+  font-family: 'Inter';
+  font-weight: 400;
+  width: 150%;
+  height: 40px;
+  border-radius: 10px;
+  border: none;
+  margin-bottom: 20px;
+  padding-inline-start: 5%;
+  padding-inline-end: 5%;
+  appearance: none;
+  -moz-appearance: textfield;
+  cursor: default;
+  outline: none;
+}
+
+.vcontact::-webkit-outer-spin-button,
+.vcontact::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
