--- a/src/Pages/Admin/Employee/Employee.css
+++ b/src/Pages/Admin/Employee/Employee.css
@@ -9,8 +9,7 @@
     position: absolute;
     width: 25%;
     height: 10%;
-    left: 10%;
-    top: 1%;
+    margin: 2% 80% 95% 12%;
     font-family: 'Inter';
     font-style: bold;
     font-weight: 900;
