--- a/src/Pages/Admin/Dashboard/Dashboard.css
+++ b/src/Pages/Admin/Dashboard/Dashboard.css
@@ -9,8 +9,7 @@
     position: absolute;
     width: 25%;
     height: 10%;
-    left: 10%;
-    top: 1%;
+    margin: 2% 80% 95% 12%;
     font-family: 'Inter';
     font-style: bold;
     font-weight: 900;
@@ -23,7 +22,7 @@
 .container-wrapper {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     height: 100vh;
 }
@@ -31,10 +30,12 @@
 .container {
     display: flex;
     justify-content: space-between;
-    padding: 6% 15%;
+    align-items: center;
+    margin: 150px auto 180px 160px;
 }
   
 .box {
+    flex: 1;
     width: 40%;
     height: 100%;
     background-color: #481E1E;
@@ -76,9 +77,12 @@
     justify-content: space-between;
     padding: 8% 10%;
     margin-top: -100px;
+    align-items: center;
+    margin: -100px auto 0 150px;
 }
 
 .box2 {
+    flex: 1;
     width: 30%;
     height: 130%;
     background-color: #481E1E;
@@ -141,14 +145,12 @@
     height: 35px;
     border-radius: 5px;
     border: none;
-    margin: 20px;
-    padding-left: 10px; 
+    margin: 3% 7% 95% 95%;
     float: right;
     background-image: url(../../../Assets/search.svg);
     background-size: 16px 16px; 
     background-position: 95% center; 
     background-repeat: no-repeat;
-    padding-right: 20px;
 }
 
 /* SIDEBAR CSS */
