--- a/src/Pages/Admin/Dashboard/Dashboard.css
+++ b/src/Pages/Admin/Dashboard/Dashboard.css
@@ -3,18 +3,18 @@
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
+    background-position-x: center;
 }
 
 .dash {
-    position: absolute;
+    position: fixed;
     width: 25%;
     height: 10%;
-    margin: 2% 80% 95% 12%;
+    margin: 2% 0% 0% 12%;
     font-family: 'Inter';
     font-style: bold;
     font-weight: 900;
-    font-size: 30px;
-    display: flex;
+    font-size: xx-large;
     align-items: center;
     color: #520000;
 }
@@ -31,7 +31,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 150px auto 180px 160px;
+    margin: 10% auto 18% 10%;
 }
   
 .box {
@@ -41,7 +41,7 @@
     background-color: #481E1E;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin-right: 20px;
+    margin-right: 5%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -59,15 +59,22 @@
     border-radius: 10px 10px 0px 0px;
 }
 
-.employee-container, .profit-container, .cart-container {
-    padding-top: 5%;
+.employee-container, 
+.profit-container, 
+.cart-container {
+    width: fit-content;
+    height: fit-content;
+}
+
+.employee {
+    width: 50%;
 }
 
 .number {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 800;
-    font-size: 60px;
+    font-size: xxx-large;
     line-height: 97px;
     color: #FFFFFF;
 }
@@ -75,10 +82,8 @@
 .container2 {
     display: flex;
     justify-content: space-between;
-    padding: 8% 10%;
-    margin-top: -100px;
     align-items: center;
-    margin: -100px auto 0 150px;
+    margin: -12% auto 0 9.5%;
 }
 
 .box2 {
@@ -88,7 +93,7 @@
     background-color: #481E1E;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin-right: 20px;
+    margin-right: 5%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -106,8 +111,13 @@
     border-radius: 10px 10px 0px 0px;
 }
 
-.viands-container, .drinks-container, .snacks-container, .schoolsupply-container {
+.viands-container, 
+.drinks-container, 
+.snacks-container, 
+.schoolsupply-container {
     padding-top: 20%;
+    width: fit-content;
+    height: fit-content;
 }
 
 /* ORDER LIST CSS */
@@ -140,13 +150,14 @@
 /* SEARCH BAR CSS */
 
 .search {
+    position: fixed;
+    right: 2%;
+    top: 5%;
     font-family: 'Inter';
     width: 20%;
     height: 35px;
     border-radius: 5px;
     border: none;
-    margin: 3% 7% 95% 95%;
-    float: right;
     background-image: url(../../../Assets/search.svg);
     background-size: 16px 16px; 
     background-position: 95% center; 
@@ -158,8 +169,6 @@
 .logo {
     width: 50px;
     height: 50px;
-    /* height:50%;
-    width: 50%; */
     margin: 10%;
 }
   
