--- a/src/Pages/Admin/Viands/Viands.css
+++ b/src/Pages/Admin/Viands/Viands.css
@@ -1,4 +1,4 @@
-.employee-page {
+.viands-page {
     background-image: url(../../../Assets/bg.svg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -6,14 +6,14 @@
     background-position-x: center;
 }
 
-.page-header {
+.vpageheader {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
 
-.e {
+.v {
     width: 50%;
     height: 10%;
     margin: 2% 0% 0% 12%;
@@ -25,7 +25,7 @@
     color: #520000;
 }
 
-.add-employee {
+.add-viand {
     position: fixed;
     top: 5%;
     right: 23%;
@@ -34,7 +34,7 @@
     font-size: small;
     background-color: #520000;
     color: #FFFFFF;
-    width: 10%;
+    width: 8%;
     height:35px; 
     border-radius: 5px;
     border: none;
@@ -47,9 +47,9 @@
     cursor: pointer;
 }
 
-/* EMPLOYEE LIST CSS */
+/* VIANDS LIST CSS */
 
-.employee-list {
+.viands-list {
     position: fixed;
     z-index: 0!important;
     top: 23%;
@@ -61,31 +61,31 @@
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: center;
-} 
-  
-.employee-list table {
+}
+
+.viands-list table {
     table-layout: fixed;
     width: 100%;
 }
 
-.employee-list th.first-column {
-    width: 8%;
+.viands-list th.vfirst-column {
+    width: 15%;
 }
 
-.employee-list th.last-column {
-    width: 10%;
+.viands-list th.vlast-column {
+    width: 20%;
 }
   
-.employee-list th,
-.employee-list td {
+.viands-list th,
+.viands-list td {
     width: 25%;
 }
 
-.employee-list tr:nth-child(odd) {
+.viands-list tr:nth-child(odd) {
     background: #FFFFFF;
 }
 
-.edit {
+.viand-edit {
     font-family: 'Inter';
     font-style: normal;
     font-size: medium;
@@ -104,7 +104,7 @@
     cursor: pointer;
 }
 
-.delete {
+.viand-delete {
     font-family: 'Inter';
     font-style: normal;
     background-color: #520000;
@@ -123,9 +123,9 @@
     cursor: pointer;
 }
 
-/* ADD EMPLOYEE MODAL css */
+/* ADD VIAND MODAL css */
 
-.add-employee-container {
+.add-viand-container {
     position: fixed;
     z-index: 99!important;
     top: 0; right: 0; bottom: 0; left: 0;
@@ -136,11 +136,11 @@
     
 }
   
-.add-employee-modal {
+.add-viand-modal {
     width: 30vw;
     height: auto;
     background-color: #fff;
-    padding: 2rem;
+    padding: 1.5rem;
     border-radius: 20px;
     background-color: #B88D5D;
     backdrop-filter: blur(5px);
@@ -152,7 +152,7 @@
     z-index: 99!important;
 }
 
-.exit {
+.viand-exit {
     background-color: transparent;
     border: none;
     position: absolute;
@@ -164,11 +164,11 @@
     padding: 0;
 }
   
-.exit img {
+.viand-exit img {
     height: 20px;
 }
   
-.add-employee-modal_header-title {
+.add-viand-modal_header-title {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 800;
@@ -190,14 +190,14 @@
     transform: scale(1.1);
 }
   
-.button-row {
+.viand-button-row {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 20%;
+    /* padding-top: 0; */
 }
 
-.okay {
+.viand-okay {
     background: #481E1E;
     border: none;
     border-radius: 10px;
@@ -211,7 +211,7 @@
     margin-right: 10px;
 }
 
-.cancel {
+.viand-cancel {
     background: #FFFFFF;
     border: none;
     border-radius: 10px;
@@ -226,25 +226,27 @@
     margin-right: 10px;
 }
   
-.okay:hover,
-.cancel:hover {
+.viand-okay:hover,
+.viand-cancel:hover {
     background-color: rgba(54, 67, 72, 0.8);
 }
 
-/* ADD EMPLOYEE FORM CSS */
+/* ADD VIAND FORM CSS */
 
-.input {
+.v-input {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.name,
-.email,
-.password {
+.type,
+.vname,
+.description,
+.expiry,
+.image {
   font-family: 'Inter';
   font-weight: 400;
-  width: 150%;
+  width: 20vw;
   height: 40px;
   border-radius: 10px;
   border: none;
@@ -253,10 +255,11 @@
   padding-inline-end: 5%;
 }
 
-.contact {
+.price,
+.quantity {
   font-family: 'Inter';
   font-weight: 400;
-  width: 150%;
+  width: 20vw;
   height: 40px;
   border-radius: 10px;
   border: none;
@@ -267,15 +270,21 @@
   -moz-appearance: textfield;
 }
 
-.contact::-webkit-outer-spin-button,
-.contact::-webkit-inner-spin-button {
+.price::-webkit-outer-spin-button,
+.price::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
-/* DELETE EMPLOYEE CSS */
+.quantity::-webkit-outer-spin-button,
+.quantity::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 
-.delete-employee-container {
+/* DELETE VIAND CSS */
+
+.delete-viand-container {
     position: fixed;
     top: 0; right: 0; bottom: 0; left: 0;
     background-color: rgba(0, 0, 0, 0.35);
@@ -284,7 +293,7 @@
     align-items: center;
 }
   
-.delete-employee-modal {
+.delete-viand-modal {
     width: 30vw;
     height: auto;
     background-color: #fff;
@@ -304,7 +313,7 @@
     height: 90%;
 }
   
-.delete-employee-modal_header-title {
+.delete-viand-modal_header-title {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 800;
@@ -361,151 +370,4 @@
 .no:hover,
 .yes:hover {
     background-color: rgba(54, 67, 72, 0.8);
-}
-
-/* EDIT EMPLOYEE CSS */
-
-.edit-employee-container {
-    position: fixed;
-    top: 0; right: 0; bottom: 0; left: 0;
-    background-color: rgba(0, 0, 0, 0.35);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-  
-.edit-employee-modal {
-    width: 30vw;
-    height: auto;
-    background-color: #fff;
-    padding: 2rem;
-    border-radius: 20px;
-    background-color: #B88D5D;
-    backdrop-filter: blur(5px);
-    box-shadow: 1px 4px 4px 2px rgba(0, 0, 0, 0.5);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-  
-.edit-employee-modal_header-title {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 800;
-    font-size: 30px;
-    line-height: 48px;
-    text-align: center;
-    color: #520000;
-    margin-top: 10px;
-}
-
-/* VIEW EMPLOYEE CSS */
-
-.view-employee-container {
-    position: fixed;
-    top: 0; right: 0; bottom: 0; left: 0;
-    background-color: rgba(0, 0, 0, 0.35);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-  
-.view-employee-modal {
-    width: 30vw;
-    height: auto;
-    background-color: #fff;
-    padding: 2rem;
-    border-radius: 20px;
-    background-color: #B88D5D;
-    backdrop-filter: blur(5px);
-    box-shadow: 1px 4px 4px 2px rgba(0, 0, 0, 0.5);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-  
-.view-employee-modal_header-title {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 800;
-    font-size: 30px;
-    line-height: 48px;
-    text-align: center;
-    color: #520000;
-    margin-top: 10px;
-}
-
-.view-edit {
-    background: #481E1E;
-    border: none;
-    border-radius: 10px;
-    font-family: 'Inter';
-    color: #FFFFFF;
-    font-size: medium;
-    width: 6vw;
-    height: 5vh;
-    cursor: pointer;
-    padding: 0;
-    margin-right: 10px;
-}
-
-.view-delete {
-    background: #FFFFFF;
-    border: none;
-    border-radius: 10px;
-    font-family: 'Inter';
-    font-weight: 600;
-    color: #481E1E;
-    font-size: medium;
-    width: 6vw;
-    height: 5vh;
-    cursor: pointer;
-    padding: 0;
-    margin-right: 10px;
-}
-
-.employee-data {
-    cursor: pointer;
-}
-
-/* VIEW EMPLOYEE FORM CSS */
-
-.vname,
-.vemail,
-.vpassword {
-  font-family: 'Inter';
-  font-weight: 400;
-  width: 150%;
-  height: 40px;
-  border-radius: 10px;
-  border: none;
-  margin-bottom: 20px;
-  padding-inline-start: 5%;
-  padding-inline-end: 5%;
-  cursor: default;
-  outline: none;
-}
-
-.vcontact {
-  font-family: 'Inter';
-  font-weight: 400;
-  width: 150%;
-  height: 40px;
-  border-radius: 10px;
-  border: none;
-  margin-bottom: 20px;
-  padding-inline-start: 5%;
-  padding-inline-end: 5%;
-  appearance: none;
-  -moz-appearance: textfield;
-  cursor: default;
-  outline: none;
-}
-
-.vcontact::-webkit-outer-spin-button,
-.vcontact::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
 }
