resolved price css conflict

--- a/src/Pages/Customer/Home/Home.css
+++ b/src/Pages/Customer/Home/Home.css
@@ -203,7 +203,7 @@ body {
     margin-left: 4%;
 }
 
-.price {
+.product-price {
     font-family: 'Inter';
     font-size: x-large;
     font-weight: 800;
