--- a/src/Pages/Customer/Home/Home.css
+++ b/src/Pages/Customer/Home/Home.css
@@ -173,6 +173,8 @@ body {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 25px 25px 25px 25px;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
 .product-containers {
@@ -193,6 +195,10 @@ body {
     margin-left: 5%;
 }
 
+.rate {
+    display: flex;
+}
+
 .rating {
     width: 10%;
     height: 10%;
@@ -206,7 +212,8 @@ body {
 .product-price {
     font-family: 'Inter';
     font-size: x-large;
-    font-weight: 800;
+    font-weight: 500;
     margin: auto;
-    margin-left: 50%;
+    margin-right: 5%;
+    padding-bottom: 3%;
 }
