--- a/src/Pages/Admin/Dashboard/Dashboard.css
+++ b/src/Pages/Admin/Dashboard/Dashboard.css
@@ -104,6 +104,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    cursor: pointer;
 }
 
 .box-content2 {
