--- a/src/Pages/Customer/Landing/LoginModal.css
+++ b/src/Pages/Customer/Landing/LoginModal.css
@@ -1,6 +1,9 @@
 .modalContainer {
   position: fixed;
-  top: 0; right: 0; bottom: 0; left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   background-color: rgba(0, 0, 0, 0.35);
   display: flex;
   justify-content: center;
@@ -54,7 +57,7 @@
 
 
 .customer-login {
-  background: #481E1E;
+  background: #520000;
   border: none;
   border-radius: 10px;
   font-family: 'Inter';
