--- a/src/Pages/Admin/Employee/Employee.css
+++ b/src/Pages/Admin/Employee/Employee.css
@@ -35,13 +35,13 @@
     background-color: #520000;
     color: #FFFFFF;
     width: 10%;
-    height:35px; 
+    height: 35px;
     border-radius: 5px;
     border: none;
     padding-right: 2%;
     background-image: url(../../../Assets/addemployee.svg);
     background-size: 16px 16px;
-    background-position: 95% center; 
+    background-position: 95% center;
     background-repeat: no-repeat;
     text-align: center;
     cursor: pointer;
@@ -51,18 +51,18 @@
 
 .employee-list {
     position: fixed;
-    z-index: 0!important;
+    z-index: 0 !important;
     top: 23%;
     right: 7%;
     width: 80%;
-    background: rgba(255, 255, 255, 0.9);    
+    background: rgba(255, 255, 255, 0.9);
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: center;
-} 
-  
+}
+
 .employee-list table {
     table-layout: fixed;
     width: 100%;
@@ -75,7 +75,7 @@
 .employee-list th.last-column {
     width: 10%;
 }
-  
+
 .employee-list th,
 .employee-list td {
     width: 25%;
@@ -92,13 +92,13 @@
     background-color: #520000;
     color: #FFFFFF;
     width: 100%;
-    height: 30px; 
+    height: 30px;
     border-radius: 5px;
     border: none;
     padding-right: 20%;
     background-image: url(../../../Assets/edit.svg);
     background-size: 16px 16px;
-    background-position: 95% center; 
+    background-position: 95% center;
     background-repeat: no-repeat;
     text-align: center;
     cursor: pointer;
@@ -111,13 +111,13 @@
     font-size: medium;
     color: #FFFFFF;
     width: 100%;
-    height: 30px; 
+    height: 30px;
     border-radius: 5px;
     border: none;
     padding-right: 20%;
     background-image: url(../../../Assets/delete.svg);
     background-size: 16px 16px;
-    background-position: 95% center; 
+    background-position: 95% center;
     background-repeat: no-repeat;
     text-align: center;
     cursor: pointer;
@@ -127,15 +127,18 @@
 
 .add-employee-container {
     position: fixed;
-    z-index: 99!important;
-    top: 0; right: 0; bottom: 0; left: 0;
+    z-index: 99 !important;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     background-color: rgba(0, 0, 0, 0.35);
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
 }
-  
+
 .add-employee-modal {
     width: 30vw;
     height: auto;
@@ -149,7 +152,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    z-index: 99!important;
+    z-index: 99 !important;
 }
 
 .exit {
@@ -163,11 +166,11 @@
     cursor: pointer;
     padding: 0;
 }
-  
+
 .exit img {
     height: 20px;
 }
-  
+
 .add-employee-modal_header-title {
     font-family: 'Inter';
     font-style: normal;
@@ -178,18 +181,18 @@
     color: #520000;
     margin-top: 10px;
 }
-  
+
 .close {
     position: absolute;
     top: 0;
     right: 0;
     background: transparent;
 }
-  
+
 .close:hover img {
     transform: scale(1.1);
 }
-  
+
 .button-row {
     display: flex;
     justify-content: center;
@@ -198,7 +201,7 @@
 }
 
 .okay {
-    background: #481E1E;
+    background: #520000;
     border: none;
     border-radius: 10px;
     font-family: 'Inter';
@@ -217,7 +220,7 @@
     border-radius: 10px;
     font-family: 'Inter';
     font-weight: 600;
-    color: #481E1E;
+    color: #520000;
     font-size: medium;
     width: 6vw;
     height: 5vh;
@@ -225,7 +228,7 @@
     padding: 0;
     margin-right: 10px;
 }
-  
+
 .okay:hover,
 .cancel:hover {
     background-color: rgba(54, 67, 72, 0.8);
@@ -242,48 +245,51 @@
 .name,
 .email,
 .password {
-  font-family: 'Inter';
-  font-weight: 400;
-  width: 150%;
-  height: 40px;
-  border-radius: 10px;
-  border: none;
-  margin-bottom: 20px;
-  padding-inline-start: 5%;
-  padding-inline-end: 5%;
+    font-family: 'Inter';
+    font-weight: 400;
+    width: 150%;
+    height: 40px;
+    border-radius: 10px;
+    border: none;
+    margin-bottom: 20px;
+    padding-inline-start: 5%;
+    padding-inline-end: 5%;
 }
 
 .contact {
-  font-family: 'Inter';
-  font-weight: 400;
-  width: 150%;
-  height: 40px;
-  border-radius: 10px;
-  border: none;
-  margin-bottom: 20px;
-  padding-inline-start: 5%;
-  padding-inline-end: 5%;
-  appearance: none;
-  -moz-appearance: textfield;
+    font-family: 'Inter';
+    font-weight: 400;
+    width: 150%;
+    height: 40px;
+    border-radius: 10px;
+    border: none;
+    margin-bottom: 20px;
+    padding-inline-start: 5%;
+    padding-inline-end: 5%;
+    appearance: none;
+    -moz-appearance: textfield;
 }
 
 .contact::-webkit-outer-spin-button,
 .contact::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 /* DELETE EMPLOYEE CSS */
 
 .delete-employee-container {
     position: fixed;
-    top: 0; right: 0; bottom: 0; left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     background-color: rgba(0, 0, 0, 0.35);
     display: flex;
     justify-content: center;
     align-items: center;
 }
-  
+
 .delete-employee-modal {
     width: 30vw;
     height: auto;
@@ -303,7 +309,7 @@
     width: 90%;
     height: 90%;
 }
-  
+
 .delete-employee-modal_header-title {
     font-family: 'Inter';
     font-style: normal;
@@ -314,7 +320,7 @@
     margin-top: 5%;
     margin-bottom: 5%;
 }
-  
+
 .delete-content {
     font-family: 'Inter';
     font-style: normal;
@@ -330,7 +336,7 @@
 }
 
 .yes {
-    background: #481E1E;
+    background: #520000;
     border: none;
     border-radius: 10px;
     font-family: 'Inter';
@@ -349,7 +355,7 @@
     border-radius: 10px;
     font-family: 'Inter';
     font-weight: 600;
-    color: #481E1E;
+    color: #520000;
     font-size: medium;
     width: 6vw;
     height: 5vh;
@@ -357,7 +363,7 @@
     padding: 0;
     margin-right: 10px;
 }
-  
+
 .no:hover,
 .yes:hover {
     background-color: rgba(54, 67, 72, 0.8);
@@ -367,13 +373,16 @@
 
 .edit-employee-container {
     position: fixed;
-    top: 0; right: 0; bottom: 0; left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     background-color: rgba(0, 0, 0, 0.35);
     display: flex;
     justify-content: center;
     align-items: center;
 }
-  
+
 .edit-employee-modal {
     width: 30vw;
     height: auto;
@@ -388,7 +397,7 @@
     align-items: center;
     justify-content: center;
 }
-  
+
 .edit-employee-modal_header-title {
     font-family: 'Inter';
     font-style: normal;
@@ -404,13 +413,16 @@
 
 .view-employee-container {
     position: fixed;
-    top: 0; right: 0; bottom: 0; left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     background-color: rgba(0, 0, 0, 0.35);
     display: flex;
     justify-content: center;
     align-items: center;
 }
-  
+
 .view-employee-modal {
     width: 30vw;
     height: auto;
@@ -425,7 +437,7 @@
     align-items: center;
     justify-content: center;
 }
-  
+
 .view-employee-modal_header-title {
     font-family: 'Inter';
     font-style: normal;
@@ -438,7 +450,7 @@
 }
 
 .view-edit {
-    background: #481E1E;
+    background: #520000;
     border: none;
     border-radius: 10px;
     font-family: 'Inter';
@@ -457,7 +469,7 @@
     border-radius: 10px;
     font-family: 'Inter';
     font-weight: 600;
-    color: #481E1E;
+    color: #520000;
     font-size: medium;
     width: 6vw;
     height: 5vh;
@@ -474,37 +486,37 @@
 
 .vname,
 .vemail {
-  font-family: 'Inter';
-  font-weight: 400;
-  width: 100%;
-  height: 40px;
-  border-radius: 10px;
-  border: none;
-  margin-bottom: 20px;
-  padding-inline-start: 5%;
-  padding-inline-end: 5%;
-  cursor: default;
-  outline: none;
+    font-family: 'Inter';
+    font-weight: 400;
+    width: 100%;
+    height: 40px;
+    border-radius: 10px;
+    border: none;
+    margin-bottom: 20px;
+    padding-inline-start: 5%;
+    padding-inline-end: 5%;
+    cursor: default;
+    outline: none;
 }
 
 .vcontact {
-  font-family: 'Inter';
-  font-weight: 400;
-  width: 100%;
-  height: 40px;
-  border-radius: 10px;
-  border: none;
-  margin-bottom: 20px;
-  padding-inline-start: 5%;
-  padding-inline-end: 5%;
-  appearance: none;
-  -moz-appearance: textfield;
-  cursor: default;
-  outline: none;
+    font-family: 'Inter';
+    font-weight: 400;
+    width: 100%;
+    height: 40px;
+    border-radius: 10px;
+    border: none;
+    margin-bottom: 20px;
+    padding-inline-start: 5%;
+    padding-inline-end: 5%;
+    appearance: none;
+    -moz-appearance: textfield;
+    cursor: default;
+    outline: none;
 }
 
 .vcontact::-webkit-outer-spin-button,
 .vcontact::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
