--- a/src/Pages/Admin/Item/EditItemModal.css
+++ b/src/Pages/Admin/Item/EditItemModal.css
@@ -1,7 +1,10 @@
 .edit-item-container {
   position: fixed;
-  z-index: 99!important;
-  top: 0; right: 0; bottom: 0; left: 0;
+  z-index: 99 !important;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   background-color: rgba(0, 0, 0, 0.35);
   display: flex;
   justify-content: center;
@@ -9,41 +12,41 @@
 }
 
 .edit-item-modal {
-    width: 30vw;
-    height: auto;
-    background-color: #fff;
-    padding: 2rem;
-    border-radius: 20px;
-    background-color: #B88D5D;
-    backdrop-filter: blur(5px);
-    box-shadow: 1px 4px 4px 2px rgba(0, 0, 0, 0.5);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    z-index: 99!important;
+  width: 30vw;
+  height: auto;
+  background-color: #fff;
+  padding: 2rem;
+  border-radius: 20px;
+  background-color: #B88D5D;
+  backdrop-filter: blur(5px);
+  box-shadow: 1px 4px 4px 2px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 99 !important;
 }
 
 .edit-item-modal-header-title {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 800;
-    font-size: 30px;
-    line-height: 48px;
-    text-align: center;
-    color: #520000;
-    margin-top: 0;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 30px;
+  line-height: 48px;
+  text-align: center;
+  color: #520000;
+  margin-top: 0;
 }
 
 .close {
-    position: absolute;
-    top: 0;
-    right: 0;
-    background: transparent;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: transparent;
 }
 
 .close:hover img {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .modal-header {
@@ -76,7 +79,7 @@
 }
 
 .okay {
-  background: #481E1E;
+  background: #520000;
   border: none;
   border-radius: 10px;
   font-family: 'Inter';
@@ -90,23 +93,23 @@
 }
 
 .cancel {
-    background: #FFFFFF;
-    border: none;
-    border-radius: 10px;
-    font-family: 'Inter';
-    font-weight: 600;
-    color: #481E1E;
-    font-size: medium;
-    width: 6vw;
-    height: 5vh;
-    cursor: pointer;
-    padding: 0;
-    margin-right: 10px;
+  background: #FFFFFF;
+  border: none;
+  border-radius: 10px;
+  font-family: 'Inter';
+  font-weight: 600;
+  color: #520000;
+  font-size: medium;
+  width: 6vw;
+  height: 5vh;
+  cursor: pointer;
+  padding: 0;
+  margin-right: 10px;
 }
 
 .okay:hover,
 .cancel:hover {
-    background-color: rgba(54, 67, 72, 0.8);
+  background-color: rgba(54, 67, 72, 0.8);
 }
 
 .edit-viand-input {
