--- a/src/Pages/Admin/Snacks/Snacks.css
+++ b/src/Pages/Admin/Snacks/Snacks.css
@@ -52,7 +52,7 @@
 .snacks-list {
     position: fixed;
     z-index: 0 !important;
-    top: 23%;
+    top: 18%;
     right: 7%;
     width: 80%;
     background: rgba(255, 255, 255, 0.9);
@@ -61,6 +61,8 @@
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: center;
+    overflow-y: scroll;
+    max-height: 65%;
 }
 
 .snacks-list table {
