--- a/src/Pages/Admin/Landing/Landing.css
+++ b/src/Pages/Admin/Landing/Landing.css
@@ -199,3 +199,22 @@ footer.modal_footer {
   border: none;
   margin-bottom: 20px;
 }
+
+/* SCROLLBAR */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px !important;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
