--- a/src/Pages/Admin/Landing/Landing.css
+++ b/src/Pages/Admin/Landing/Landing.css
@@ -140,7 +140,7 @@ body {
 .modal_header-title {
   text-align: center;
   color: #fff;
-  margin-top: 10px;
+  /* margin-top: 10px; */
 }
 
 .close {
