--- a/src/Pages/Admin/Others/Others.css
+++ b/src/Pages/Admin/Others/Others.css
@@ -183,9 +183,10 @@
     font-style: normal;
     font-weight: 800;
     font-size: 30px;
-    line-height: 48px;
+    /* line-height: 48px; */
     text-align: center;
     color: #520000;
+    margin: 0%;
     margin-top: 10px;
 }
 
