--- a/src/Pages/Customer/Landing/LoginModal.css
+++ b/src/Pages/Customer/Landing/LoginModal.css
@@ -49,7 +49,7 @@
 
 .modal_footer {
   font-family: "Inter";
-  float: right;
+  /* float: right; */
   margin-top: 3%;
   margin-right: 7%;
   padding-bottom: 5%;
