removed clear search button

--- a/src/Pages/Admin/Dashboard/Dashboard.css
+++ b/src/Pages/Admin/Dashboard/Dashboard.css
@@ -172,6 +172,10 @@
     background-repeat: no-repeat;
 }
 
+.search::-webkit-search-cancel-button {
+    appearance: none;
+} 
+
 /* SIDEBAR CSS */
 
 .logo {
