dynamic add item modal

--- a/src/Pages/Admin/Item/Item.css
+++ b/src/Pages/Admin/Item/Item.css
@@ -173,6 +173,7 @@
 }
 
 .itemsname,
+.type,
 .description,
 .expiry,
 .image {
@@ -212,4 +213,114 @@
 .quantity::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+/* ADD ITEM MODAL CSS */
+
+.add-item-container {
+  position: fixed;
+  z-index: 99 !important;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.35);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.add-item-modal {
+  width: 30vw;
+  height: auto;
+  background-color: #fff;
+  padding: 1.5rem;
+  border-radius: 20px;
+  background-color: #B88D5D;
+  backdrop-filter: blur(5px);
+  box-shadow: 1px 4px 4px 2px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 99 !important;
+}
+
+.item-exit {
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  top: 8%;
+  right: 8%;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+}
+
+.item-exit img {
+  height: 20px;
+}
+
+.add-item-modal_header-title {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 30px;
+  text-align: center;
+  color: #520000;
+  margin: 0;
+  margin-bottom: 5%;
+}
+
+.close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: transparent;
+}
+
+.close:hover img {
+  transform: scale(1.1);
+}
+
+.item-button-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.item-okay {
+  background: #520000;
+  border: none;
+  border-radius: 10px;
+  font-family: 'Inter';
+  color: #FFFFFF;
+  font-size: medium;
+  width: 6vw;
+  height: 5vh;
+  cursor: pointer;
+  padding: 0;
+  margin-right: 10px;
+}
+
+.item-cancel {
+  background: #FFFFFF;
+  border: none;
+  border-radius: 10px;
+  font-family: 'Inter';
+  font-weight: 600;
+  color: #520000;
+  font-size: medium;
+  width: 6vw;
+  height: 5vh;
+  cursor: pointer;
+  padding: 0;
+  margin-right: 10px;
+}
+
+.item-okay:hover,
+.item-cancel:hover {
+  background-color: rgba(54, 67, 72, 0.8);
 }
