--- a/src/Pages/Customer/Landing/LoginModal.css
+++ b/src/Pages/Customer/Landing/LoginModal.css
@@ -63,11 +63,20 @@
   font-family: 'Inter';
   color: #FFFFFF;
   font-size: medium;
+  font-weight: 600;
   width: 10vw;
   height: 5vh;
   cursor: pointer;
   padding: 0;
   margin: 0;
+}
+
+.customer-login:hover {
+  background-color: #B88D5D;
+  color: #520000;
+  border-color: #FFFFFF;
+  border-width: 1px;
+  border-style: solid;
 }
 
 .login:hover,
